# super-user-spark

./: .gitignore  .travis.yml  LICENSE  README.md  TODO.smos  app.hs  create-nix-expr.sh  hooks.sus  makefile  notes.org  shell.nix  spark  spark-tests.tix  specification.org  stack-7.11.yaml  stack-8.24.yaml  stack-9.11.yaml  stack.yaml  super-user-spark.cabal  super-user-spark.cabal-7.11  super-user-spark.cabal-8.24  super-user-spark.cabal-9.11  super-user-spark.nix
app/: Main.hs
doc/: deployment.md  faq.md  getting-started.md  grammar.md  installation.md  language.md  pilars.md  pillars.md  specification.md  technical-details.md  usage.md
examples/: bash-example.sus  bash.sus  complex.sus  compressed.sus  config  enc.sus  env.sus  nested-example.sus  other-file-spark.sus  short.sus  simple-card.sus  test.sus  two-lines-card.sus  uncompressed.sus  unnamed-card.sus
examples/files/: test.txt
examples/ssh/: config.gpg
scripts/: cabal2nix  code_health.sh  hlint_health.sh  indentation.sh  install.sh  lib.sh  pre_commit_test.sh  pre_push_test.sh  refactor.sh  sanity.sh  test.sh  trailing_whitespace_test.sh
src/: :  Arguments.hs  Check.hs  Compiler.hs  Config.hs  Constants.hs  CoreTypes.hs  Deploy.hs  Deployer.hs  Dispatch.hs  Formatter.hs  Git.hs  Import.hs  Main.hs  Monad.hs  Parser.hs  Paths.hs  PreCompiler.hs  Pretty.hs  Seed.hs  Spark.hs  SubTypes.hs  SuperUserSpark.hs  Types.hs  Utils.hs
src/Check/: Internal.hs  Types.hs
src/Compiler/: Internal.hs  Types.hs  Utils.hs
src/Config/: Types.hs
src/Deployer/: Internal.hs  Types.hs
src/Dispatch/: Types.hs
src/Language/: Types.hs
src/Parser/: Internal.hs  Types.hs
src/SuperUserSpark/: Arguments.hs  Bake.hs  Check.hs  Compiler.hs  Config.hs  Constants.hs  CoreTypes.hs  Deployer.hs  Diagnose.hs  Dispatch.hs  Monad.hs  OptParse.hs  Parser.hs  PreCompiler.hs  Seed.hs  Types.hs  Utils.hs
src/SuperUserSpark/Bake/: Internal.hs  Types.hs
src/SuperUserSpark/Check/: Internal.hs  Types.hs
src/SuperUserSpark/Compiler/: Internal.hs  Types.hs  Utils.hs
src/SuperUserSpark/Config/: Types.hs
src/SuperUserSpark/Deployer/: Internal.hs  Types.hs
src/SuperUserSpark/Diagnose/: Internal.hs  Types.hs
src/SuperUserSpark/Dispatch/: Types.hs
src/SuperUserSpark/Language/: Types.hs
src/SuperUserSpark/OptParse/: Types.hs
src/SuperUserSpark/Parser/: Internal.hs  Types.hs
src/SuperUserSpark/PreCompiler/: Types.hs
subdir/: .bash_aliases  .bash_profile  .bashrc
test/: CheckSpec.hs  CompilerSpec.hs  DeployerSpec.hs  EndToEndSpec.hs  MainTest.hs  ParserSpec.hs  SeedSpec.hs  TestImport.hs  TestMain.hs  TestUtils.hs  simple-card.sus
test/Check/: Gen.hs  TestUtils.hs
test/Compiler/: Gen.hs  Test.hs  TestUtils.hs
test/Dispatch/: Test.hs
test/Language/: Gen.hs
test/Parser/: Gen.hs  Test.hs  TestUtils.hs
test/SuperUserSpark/: BakeSpec.hs  CheckSpec.hs  CompilerSpec.hs  DeployerSpec.hs  DiagnoseSpec.hs  EndToEndSpec.hs  ParserSpec.hs  SeedSpec.hs
test/SuperUserSpark/Bake/: Gen.hs
test/SuperUserSpark/Check/: Gen.hs  TestUtils.hs
test/SuperUserSpark/Compiler/: Gen.hs  TestUtils.hs
test/SuperUserSpark/Deployer/: Gen.hs
test/SuperUserSpark/Diagnose/: Gen.hs  TestUtils.hs
test/SuperUserSpark/EndToEnd/: RegressionSpec.hs
test/SuperUserSpark/Language/: Gen.hs
test/SuperUserSpark/OptParse/: Gen.hs
test/SuperUserSpark/Parser/: Gen.hs  TestUtils.hs
test/SuperUserSpark/PreCompiler/: Gen.hs
test_resources/end-to-end/: bash.sus  bash.sus.res
test_resources/exact_compile_test_src/: alternatives.sus  alternatives.sus.res  bash.sus  bash.sus.res  internal_sparkoff.sus  internal_sparkoff.sus.res  nesting.sus  nesting.sus.res  sub.sus  sub.sus.res
test_resources/exact_compile_test_src/sub/: subfile.sus  subfile.sus.res
test_resources/hop_test/: root.sus
test_resources/hop_test/hop1dir/: hop1.sus
test_resources/hop_test/hop1dir/hop2dir/: hop2.sus
test_resources/hop_test/hop1dir/hop2dir/hop3dir/: hop3.sus
test_resources/shouldCompile/: bash.sus  complex.sus
test_resources/shouldNotParse/: missing_implementation.sus
test_resources/shouldParse/: empty_card.sus  littered_with_comments.sus  short_syntax.sus  with_quotes.sus
