name:                super-user-spark
version:             0.4.0.0
license:             MIT
license-file:        LICENSE
description:         Configure your dotfile deployment with a DSL.
synopsis:            Configure your dotfile deployment with a DSL.
author:              Tom Sydney Kerckhove
maintainer:          syd.kerckhove@gmail.com
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:   src
  exposed-modules: 
        SuperUserSpark
      , SuperUserSpark.Bake
      , SuperUserSpark.Bake.Internal
      , SuperUserSpark.Bake.Types
      , SuperUserSpark.Check
      , SuperUserSpark.Check.Internal
      , SuperUserSpark.Check.Types
      , SuperUserSpark.Compiler
      , SuperUserSpark.Compiler.Internal
      , SuperUserSpark.Compiler.Types
      , SuperUserSpark.Compiler.Utils
      , SuperUserSpark.Constants
      , SuperUserSpark.CoreTypes
      , SuperUserSpark.Deployer
      , SuperUserSpark.Deployer.Internal
      , SuperUserSpark.Deployer.Types
      , SuperUserSpark.Diagnose
      , SuperUserSpark.Diagnose.Internal
      , SuperUserSpark.Diagnose.Types
      , SuperUserSpark.Language.Types
      , SuperUserSpark.OptParse
      , SuperUserSpark.OptParse.Types
      , SuperUserSpark.Parser
      , SuperUserSpark.Parser.Internal
      , SuperUserSpark.Parser.Types
      , SuperUserSpark.PreCompiler
      , SuperUserSpark.PreCompiler.Types
      , SuperUserSpark.Utils
  other-modules:
        Import

  ghc-options:      
       -Wall
       -fwarn-unused-imports
       -fwarn-incomplete-patterns
       -fno-warn-unused-do-bind
       -fno-warn-name-shadowing

  build-depends:   
        base                  >= 4.9   && < 5
      , aeson                 >= 0.11  && < 1.2
      , aeson-pretty          >= 0.8   && < 0.9
      , bytestring            >= 0.10  && < 0.11
      , directory             >= 1.3   && < 1.4
      , filepath              >= 1.4   && < 1.5
      , mtl                   >= 2.2   && < 2.3
      , optparse-applicative  >= 0.13  && < 0.14
      , parsec                >= 3.1.9 && < 3.2
      , process               >= 1.4   && < 1.6
      , hashable              >= 1.2   && < 1.3
      , text                  >= 1.2   && < 1.3
      , unix                  >= 2.7   && < 2.8
      , validity              >= 0.3.2 && < 0.4
      , validity-path >= 0.1 && < 0.2
      , path >= 0.5 && < 0.6
      , path-io >= 1.2 && < 1.3
      , iostring >= 0.0 && < 0.1
  default-language: Haskell2010
  default-extensions: NoImplicitPrelude

executable super-user-spark
  main-is:          Main.hs
  hs-source-dirs:   app
  ghc-options:      -Wall
                    -fwarn-unused-imports
                    -fwarn-incomplete-patterns
                    -fno-warn-unused-do-bind
                    -fno-warn-name-shadowing
                    -threaded -rtsopts -with-rtsopts=-N
  build-depends:   
        base                  >= 4.9   && < 5
      , super-user-spark
  default-language: Haskell2010
  

test-suite spark-tests
  type:             exitcode-stdio-1.0
  main-is:          MainTest.hs
  hs-source-dirs:   test
  other-modules:    
        SuperUserSpark.BakeSpec
      , SuperUserSpark.Bake.Gen
      , SuperUserSpark.Check.Gen
      , SuperUserSpark.Check.TestUtils
      , SuperUserSpark.CheckSpec
      , SuperUserSpark.Compiler.Gen
      , SuperUserSpark.Compiler.TestUtils
      , SuperUserSpark.CompilerSpec
      , SuperUserSpark.Deployer.Gen
      , SuperUserSpark.DeployerSpec
      , SuperUserSpark.Diagnose.Gen
      , SuperUserSpark.Diagnose.TestUtils
      , SuperUserSpark.DiagnoseSpec
      , SuperUserSpark.EndToEnd.RegressionSpec
      , SuperUserSpark.EndToEndSpec
      , SuperUserSpark.Language.Gen
      , SuperUserSpark.OptParse.Gen
      , SuperUserSpark.Parser.Gen
      , SuperUserSpark.Parser.TestUtils
      , SuperUserSpark.ParserSpec
      , SuperUserSpark.PreCompiler.Gen
      , TestImport
      , TestUtils
  build-depends:    
        base                  >= 4.9   && < 5
      , super-user-spark
      , hspec                 >= 2.2   && < 2.5
      , hspec-core            >= 2.2   && < 2.5
      , HUnit                 >= 1.2   && < 1.6
      , QuickCheck            >= 2.8   && < 2.10
      , aeson                 
      , aeson-pretty          
      , bytestring            
      , directory             
      , filepath              
      , mtl                   
      , optparse-applicative  
      , parsec                
      , process               
      , text                  
      , transformers          
      , unix                  
      , genvalidity >= 0.3.1 && < 0.4
      , genvalidity-path >= 0.1 && < 0.2
      , genvalidity-hspec >= 0.3.1 && < 0.4
      , genvalidity-hspec-aeson >= 0.0 && < 0.1
      , validity
      , validity-path
      , path
      , path-io
      , iostring
      , hashable
  default-language:  Haskell2010
  default-extensions: NoImplicitPrelude
  
