name:                super-user-spark
version:             0.4.0.2
license:             MIT
license-file:        LICENSE
description:         Configure your dotfile deployment with a DSL.
synopsis:            Configure your dotfile deployment with a DSL.
author:              Tom Sydney Kerckhove
maintainer:          syd.kerckhove@gmail.com
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:   src
  exposed-modules: 
        SuperUserSpark
      , SuperUserSpark.Bake
      , SuperUserSpark.Bake.Internal
      , SuperUserSpark.Bake.Types
      , SuperUserSpark.Check
      , SuperUserSpark.Check.Internal
      , SuperUserSpark.Check.Types
      , SuperUserSpark.Compiler
      , SuperUserSpark.Compiler.Internal
      , SuperUserSpark.Compiler.Types
      , SuperUserSpark.Compiler.Utils
      , SuperUserSpark.Constants
      , SuperUserSpark.CoreTypes
      , SuperUserSpark.Deployer
      , SuperUserSpark.Deployer.Internal
      , SuperUserSpark.Deployer.Types
      , SuperUserSpark.Diagnose
      , SuperUserSpark.Diagnose.Internal
      , SuperUserSpark.Diagnose.Types
      , SuperUserSpark.Language.Types
      , SuperUserSpark.OptParse
      , SuperUserSpark.OptParse.Types
      , SuperUserSpark.Parser
      , SuperUserSpark.Parser.Internal
      , SuperUserSpark.Parser.Types
      , SuperUserSpark.PreCompiler
      , SuperUserSpark.PreCompiler.Types
      , SuperUserSpark.Utils
  other-modules:
        Import

  ghc-options:      
       -Wall
       -fwarn-unused-imports
       -fwarn-incomplete-patterns
       -fno-warn-unused-do-bind
       -fno-warn-name-shadowing

  build-depends:   
        base                  >= 4.9   && < 5
      , aeson
      , aeson-pretty
      , bytestring
      , directory
      , filepath
      , mtl
      , optparse-applicative
      , parsec
      , process
      , hashable
      , text
      , unix
      , validity              >= 0.6.0.0
      , validity-path
      , path
      , path-io
  default-language: Haskell2010
  default-extensions: NoImplicitPrelude

executable super-user-spark
  main-is:          Main.hs
  hs-source-dirs:   app
  ghc-options:      -Wall
                    -fwarn-unused-imports
                    -fwarn-incomplete-patterns
                    -fno-warn-unused-do-bind
                    -fno-warn-name-shadowing
                    -threaded -rtsopts -with-rtsopts=-N
  build-depends:   
        base                  >= 4.9   && < 5
      , super-user-spark
  default-language: Haskell2010
  

test-suite spark-tests
  type:             exitcode-stdio-1.0
  main-is:          MainTest.hs
  hs-source-dirs:   test
  other-modules:    
        SuperUserSpark.BakeSpec
      , SuperUserSpark.Bake.Gen
      , SuperUserSpark.Check.Gen
      , SuperUserSpark.Check.TestUtils
      , SuperUserSpark.CheckSpec
      , SuperUserSpark.Compiler.Gen
      , SuperUserSpark.Compiler.TestUtils
      , SuperUserSpark.CompilerSpec
      , SuperUserSpark.Deployer.Gen
      , SuperUserSpark.DeployerSpec
      , SuperUserSpark.Diagnose.Gen
      , SuperUserSpark.Diagnose.TestUtils
      , SuperUserSpark.DiagnoseSpec
      , SuperUserSpark.EndToEnd.RegressionSpec
      , SuperUserSpark.EndToEndSpec
      , SuperUserSpark.Language.Gen
      , SuperUserSpark.OptParse.Gen
      , SuperUserSpark.Parser.Gen
      , SuperUserSpark.Parser.TestUtils
      , SuperUserSpark.ParserSpec
      , SuperUserSpark.PreCompiler.Gen
      , TestImport
      , TestUtils
  build-depends:    
        base                  >= 4.9   && < 5
      , super-user-spark
      , hspec
      , hspec-core
      , QuickCheck
      , aeson                 
      , aeson-pretty          
      , bytestring            
      , directory             
      , filepath              
      , mtl                   
      , optparse-applicative  
      , parsec                
      , process               
      , text                  
      , transformers          
      , unix                  
      , genvalidity
      , genvalidity-path
      , genvalidity-hspec
      , genvalidity-hspec-aeson
      , validity
      , validity-path
      , path
      , path-io
      , hashable
  default-language:  Haskell2010
  default-extensions: NoImplicitPrelude
  
